# pypi-azureauth

./: README.md  justfile  pyproject.toml
.github/workflows/: check-release.yml  ci.yml  pypi.yml
python/azureauth_bin/: __init__.py
scripts/: build_wheels.py  check_release.py
